fixed hero image overlay alignmentadded album covers to shop.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ img {
     text-transform: uppercase;
 }
 
+.end-page-border {
+    border: 2px solid darkgray;
+}
+
 /*---------------------------------------Header and Nav */
 
 header {
@@ -69,6 +73,7 @@ code adapted from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_
 ---------------------------------------------------------------------------------------------------*/
 
 .hero-image {
+    position: relative;
     margin-top: 75px;
     width: 100%;
     margin-left: auto;
@@ -88,8 +93,8 @@ code adapted from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_
 .callout {
     transition: 2s ease;
     opacity: 0;
-    position: relative;
-    top: 30%;
+    position: absolute;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -105,7 +110,6 @@ code adapted from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_
   }
 
   .callout-text {
-    background-color: antiquewhite;
     color: slategrey;
   }
 
@@ -171,11 +175,31 @@ code adapted from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_
     margin-right: auto;
     padding-bottom: 50px;
     text-align: center;
+    
 }
 
 .video-height {
     height: 350px;
+    border-radius: 8px;
 }
+
+/*---------------------------------------Shop page */
+
+.cover-container {
+    background-color: yellow;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 20px;
+}
+
+.cover {
+    max-height: 100%;
+    max-width: 100%;
+    border-radius: 8px;
+
+}
+
 
 /*---------------------------------------footer*/
 
